--- a/loading.html
+++ b/loading.html
@@ -3,69 +3,45 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Loading...</title>
+  <title>Oh okay ...</title>
   <style>
     body{
       margin:0; min-height:100vh; display:grid; place-items:center;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      background: radial-gradient(900px 450px at 30% 20%, #ffe0ea, transparent 60%),
-                  radial-gradient(900px 450px at 70% 30%, #dff3ff, transparent 60%),
-                  #0b1020;
-      overflow:hidden;
-      color:white;
+      background: linear-gradient(135deg, #dff3ff, #ffe0ea);
     }
-    .wrap{ text-align:center; }
-    .heart{
-      width: 96px; height: 96px;
-      display:grid; place-items:center;
-      margin: 0 auto 14px;
-      animation: spin 900ms linear infinite;
-      filter: drop-shadow(0 16px 30px rgba(255,77,136,0.35));
+    .box{
+      text-align:center;
+      background: rgba(255,255,255,0.92);
+      padding: 28px 22px;
+      border-radius: 22px;
+      box-shadow: 0 18px 60px rgba(0,0,0,0.18);
+      width: min(560px, 92vw);
     }
-    @keyframes spin { to { transform: rotate(360deg); } }
-
-    /* “Lädt von Farbe auf” */
-    .fill{
-      width: 110px;
-      height: 10px;
-      background: rgba(255,255,255,0.18);
-      border-radius: 999px;
-      overflow:hidden;
-      margin: 0 auto;
+    h1{ margin:0 0 10px; font-size: 34px; }
+    p{ margin:0 0 16px; font-size: 18px; }
+    img{
+      width: min(420px, 86vw);
+      border-radius: 16px;
+      box-shadow: 0 14px 40px rgba(0,0,0,0.15);
     }
-    .bar{
-      height:100%;
-      width: 0%;
-      background: linear-gradient(90deg, #ff4d88, #ffd1e3);
-      animation: load 900ms ease-out forwards;
+    a{
+      display:inline-block;
+      margin-top: 18px;
+      color:#0f172a;
+      opacity:0.8;
+      text-decoration:none;
     }
-    @keyframes load { to { width: 100%; } }
-
-    .txt{ margin-top: 10px; opacity:0.9; }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="heart" aria-hidden="true">
-      <!-- Herz als SVG -->
-      <svg width="96" height="96" viewBox="0 0 24 24" fill="none">
-        <path d="M12 21s-7-4.6-9.5-9C.3 8.5 2.2 5.5 5.4 5.1c1.7-.2 3.3.6 4.2 2 .9-1.4 2.5-2.2 4.2-2 3.2.4 5.1 3.4 2.9 6.9C19 16.4 12 21 12 21z"
-              fill="#ff4d88"/>
-      </svg>
-    </div>
+  <div class="box">
+    <h1>Huh? Oh no</h1>
 
-    <div class="fill"><div class="bar"></div></div>
-    <div class="txt">Einen Moment… </div>
+    <!-- ✅ HIER festes GIF einsetzen -->
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZDJyeXZzYmlhZWpvNHVlazNmeTVuNjVyMjB5em9sYWx0OGZtZGg3YyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/pY8jLmZw0ElqvVeRH4/giphy.gif" alt="Sad Cat">
+
+    <div><a href="index.html">Zurück</a></div>
   </div>
-
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const to = params.get("to") || "index.html";
-
-    // Nach 900ms weiter
-    setTimeout(() => {
-      window.location.href = to;
-    }, 900);
-  </script>
 </body>
 </html>
