--- a/yes.html
+++ b/yes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Yeay! 🥰</title>
+  <title>Yeay!</title>
   <style>
     body{
       margin:0; min-height:100vh; display:grid; place-items:center;
@@ -37,7 +37,7 @@
 <body>
   <div class="box">
     <h1>JAAAAA!</h1>
-    <p>Freu dich auf was leckeres 😏</p>
+    <p>Freu dich auf was leckeres</p>
 
     <!-- ✅ HIER festes GIF einsetzen -->
     <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3Z2psZnp6MTVtYzUza3BxYmRiNTA2dngxa2xic2lldjE2NnBldWphZyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/gXXFrjHFJIMoqKr8UT/giphy.gif" alt="Happy Cat">
