--- a/no.html
+++ b/no.html
@@ -37,10 +37,11 @@
 <body>
   <div class="box">
 
-    <!-- ✅ HIER festes GIF einsetzen -->
+    <!-- HIER festes GIF einsetzen -->
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZDJyeXZzYmlhZWpvNHVlazNmeTVuNjVyMjB5em9sYWx0OGZtZGg3YyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/pY8jLmZw0ElqvVeRH4/giphy.gif" alt="Sad Cat">
 
     <div><a href="index.html">Zurück</a></div>
   </div>
 </body>
+
 </html>
