--- a/yes.html
+++ b/yes.html
@@ -39,10 +39,11 @@
     <h1>JAAAAA!</h1>
     <p>Freu dich auf was leckeres</p>
 
-    <!-- ✅ HIER festes GIF einsetzen -->
+    <!-- HIER festes GIF einsetzen -->
     <img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3Z2psZnp6MTVtYzUza3BxYmRiNTA2dngxa2xic2lldjE2NnBldWphZyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/gXXFrjHFJIMoqKr8UT/giphy.gif" alt="Happy Cat">
 
     <div><a href="index.html">Zurück</a></div>
   </div>
 </body>
 </html>
+
